--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ notebooks/.ipynb_checkpoints/*
 notebooks/*.hdf
 UnitySDK.log
 scripts/test_submission/summary.json
+scripts/test_submission/frames/*.npz
