--- a/environment.yml
+++ b/environment.yml
@@ -6,27 +6,25 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _tflow_select=2.1.0=gpu
   - absl-py=0.7.1=py36_0
-  - astor=0.7.1=py_0
   - astroid=2.2.5=py36_0
-  - atomicwrites=1.3.0=py36_1
-  - attrs=19.1.0=py36_1
+  - atomicwrites=1.3.0=py_0
+  - attrs=19.1.0=py_0
   - autopep8=1.4.4=py_0
-  - backcall=0.1.0=py36_0
-  - blas=1.0=openblas
-  - bleach=3.1.0=py36_0
+  - backcall=0.1.0=py_0
+  - blas=1.1=openblas
+  - bleach=3.1.0=py_0
   - bzip2=1.0.8=h516909a_0
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2019.5.15=0
+  - ca-certificates=2019.6.16=hecc5488_0
   - cairo=1.16.0=h18b612c_1001
-  - certifi=2019.6.16=py36_0
+  - certifi=2019.6.16=py36_1
   - cudatoolkit=10.0.130=0
   - cudnn=7.6.0=cuda10.0_0
   - cupti=10.0.130=0
-  - cycler=0.10.0=py36_0
   - dbus=1.13.6=he372182_0
-  - decorator=4.4.0=py36_1
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py36_0
+  - decorator=4.4.0=py_0
+  - defusedxml=0.5.0=py_1
+  - entrypoints=0.3=py36_1000
   - expat=2.2.5=he1b5a44_1003
   - ffmpeg=4.1.3=h167e202_0
   - fontconfig=2.13.1=he4413a7_1000
@@ -37,7 +35,6 @@ dependencies:
   - glib=2.58.3=h6f030ca_1002
   - gmp=6.1.2=hf484d3e_1000
   - gnutls=3.6.5=hd3a4fd2_1002
-  - google-pasta=0.1.7=py_0
   - graphite2=1.3.13=hf484d3e_1000
   - gst-plugins-base=1.14.5=h0935bb2_0
   - gstreamer=1.14.5=h36ae1b5_0
@@ -45,110 +42,118 @@ dependencies:
   - harfbuzz=2.4.0=h37c48d4_1
   - hdf5=1.10.4=nompi_h3c11f04_1106
   - icu=58.2=hf484d3e_1000
-  - importlib_metadata=0.17=py36_1
-  - ipykernel=5.1.1=py36h39e3cac_0
-  - ipython=7.6.1=py36h39e3cac_0
-  - ipython_genutils=0.2.0=py36_0
+  - importlib_metadata=0.18=py36_0
+  - ipykernel=5.1.1=py36h5ca1d4c_0
+  - ipython=7.6.1=py36h5ca1d4c_0
+  - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.0=py_0
   - isort=4.3.21=py36_0
   - jasper=1.900.1=h07fcdf6_1006
-  - jedi=0.13.3=py36_0
-  - jinja2=2.10.1=py36_0
-  - joblib=0.13.2=py36_0
+  - jedi=0.14.1=py36_0
+  - jinja2=2.10.1=py_0
+  - joblib=0.13.2=py_0
   - jpeg=9c=h14c3975_1001
   - jsonschema=3.0.1=py36_0
-  - jupyter=1.0.0=py36_7
+  - jupyter=1.0.0=py_2
   - jupyter_client=5.3.1=py_0
-  - jupyter_console=6.0.0=py36_0
-  - jupyter_core=4.5.0=py_0
+  - jupyter_console=6.0.0=py_0
+  - jupyter_core=4.4.0=py_0
   - keras-applications=1.0.7=py_1
   - keras-preprocessing=1.0.9=py_1
-  - kiwisolver=1.1.0=py36he6710b0_0
+  - kiwisolver=1.1.0=py36hc9558a2_0
   - lame=3.100=h14c3975_1001
-  - lazy-object-proxy=1.4.1=py36h7b6447c_0
-  - libblas=3.8.0=10_openblas
-  - libcblas=3.8.0=10_openblas
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
+  - lazy-object-proxy=1.4.1=py36h516909a_0
+  - libblas=3.8.0=6_h6e990d7_netlib
+  - libcblas=3.8.0=6_h6e990d7_netlib
+  - libffi=3.2.1=he1b5a44_1006
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran=3.0.0=1
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=10_openblas
-  - liblapacke=3.8.0=10_openblas
-  - libopenblas=0.3.6=h6e990d7_4
+  - liblapack=3.8.0=6_h6e990d7_netlib
+  - liblapacke=3.8.0=6_h6e990d7_netlib
   - libpng=1.6.37=hed695b0_0
   - libprotobuf=3.9.0=h8b12597_0
-  - libsodium=1.0.16=h1bed415_0
+  - libsodium=1.0.17=h516909a_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.0.10=h57b8799_1003
   - libuuid=2.32.1=h14c3975_1000
   - libwebp=1.0.2=h576950b_1
   - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_1
+  - libxml2=2.9.9=h13577e0_2
   - lz4-c=1.8.3=he1b5a44_1001
   - markdown=3.1.1=py_0
-  - markupsafe=1.1.1=py36h7b6447c_0
-  - matplotlib=3.1.0=py36h5429711_0
-  - mistune=0.8.4=py36h7b6447c_0
-  - more-itertools=7.0.0=py36_0
+  - markupsafe=1.1.1=py36h14c3975_0
+  - matplotlib=3.1.0=py36_0
+  - matplotlib-base=3.1.0=py36h5f35d83_0
+  - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py36h14c3975_1000
+  - mock=3.0.5=py36_0
+  - more-itertools=7.1.0=py_0
   - nbconvert=5.5.0=py_0
-  - nbformat=4.4.0=py36_0
-  - ncurses=6.1=he6710b0_1
+  - nbformat=4.4.0=py_1
+  - ncurses=6.1=hf484d3e_1002
   - nettle=3.4.1=h1bed415_1002
-  - notebook=5.7.8=py36_0
-  - openblas=0.3.6=h6e990d7_4
-  - opencv=4.1.0=py36h5517eff_4
+  - notebook=6.0.0=py36_0
+  - numpy=1.14.5=py36_blas_openblashd3ea46f_202
+  - openblas=0.2.20=8
+  - opencv=4.1.0=py36h4a2692f_3
   - openh264=1.8.0=hdbcaa40_1000
-  - openssl=1.1.1c=h7b6447c_1
-  - packaging=19.0=py36_0
-  - pandas=0.24.2=py36he6710b0_0
-  - pandoc=2.2.3.2=0
-  - pandocfilters=1.4.2=py36_1
-  - parso=0.5.0=py_0
+  - openssl=1.1.1c=h516909a_0
+  - packaging=19.0=py_0
+  - pandas=0.24.2=py36hf484d3e_0
+  - pandoc=2.7.3=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.5.1=py_0
   - pcre=8.41=hf484d3e_1003
   - pexpect=4.7.0=py36_0
-  - pickleshare=0.7.5=py36_0
-  - pip=19.1.1=py36_0
+  - pickleshare=0.7.5=py36_1000
+  - pip=19.2.1=py36_0
   - pixman=0.38.0=h516909a_1003
+  - pluggy=0.12.0=py_0
   - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=2.0.9=py36_0
+  - prompt_toolkit=2.0.9=py_0
   - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py36_0
-  - py=1.8.0=py36_0
-  - pydot=1.3.0=py36_0
+  - ptyprocess=0.6.0=py_1001
+  - py=1.8.0=py_0
+  - pycodestyle=2.5.0=py_0
   - pygments=2.4.2=py_0
   - pylint=2.3.1=py36_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=5.9.2=py36h05f1152_2
-  - pyrsistent=0.14.11=py36h7b6447c_0
-  - python=3.6.8=h0371630_0
+  - pyparsing=2.4.1.1=py_0
+  - pyqt=5.9.2=py36hcca6a23_0
+  - pyrsistent=0.15.3=py36h516909a_0
+  - pytest=5.0.1=py36_1
+  - python=3.6.7=h357f687_1005
+  - python-dateutil=2.8.0=py_0
   - pytz=2019.1=py_0
-  - pyzmq=18.0.0=py36he6710b0_0
+  - pyzmq=18.0.2=py36h1768529_2
   - qt=5.9.7=h52cfd70_2
-  - qtconsole=4.5.1=py_0
-  - readline=7.0=h7b6447c_5
+  - qtconsole=4.5.2=py_0
+  - readline=8.0=hf8c457e_0
   - rope=0.14.0=py_0
-  - scikit-learn=0.21.2=py36h22eb022_0
-  - send2trash=1.5.0=py36_0
+  - scikit-learn=0.21.2=py36h627018c_0
+  - scipy=1.1.0=py36_blas_openblash7943236_201
+  - send2trash=1.5.0=py_0
   - setuptools=41.0.1=py36_0
-  - sip=4.19.8=py36hf484d3e_0
-  - sqlite=3.29.0=h7b6447c_0
-  - tensorboard=1.14.0=py36hf484d3e_0
-  - tensorflow=1.14.0=gpu_py36h57aa796_0
-  - tensorflow-base=1.14.0=gpu_py36h8d69cac_0
-  - tensorflow-estimator=1.14.0=py_0
-  - tensorflow-gpu=1.14.0=h0d30ee6_0
+  - sip=4.19.8=py36hf484d3e_1000
+  - six=1.12.0=py36_1000
+  - sqlite=3.29.0=hcee41ef_0
+  - tensorboard=1.13.1=py36_0
+  - tensorflow=1.13.1=gpu_py36h3991807_0
+  - tensorflow-base=1.13.1=gpu_py36h8d69cac_0
+  - tensorflow-estimator=1.13.0=py_0
+  - tensorflow-gpu=1.13.1=h0d30ee6_0
   - termcolor=1.1.0=py_2
   - terminado=0.8.2=py36_0
-  - testpath=0.4.2=py36_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.3=py36h7b6447c_0
-  - tqdm=4.32.1=py_0
-  - traitlets=4.3.2=py36_0
-  - typed-ast=1.3.4=py36h7b6447c_0
-  - wcwidth=0.1.7=py36_0
-  - webencodings=0.5.1=py36_1
-  - werkzeug=0.15.4=py_0
+  - testpath=0.4.2=py_1001
+  - tk=8.6.9=hed695b0_1002
+  - tornado=6.0.3=py36h516909a_0
+  - tqdm=4.32.2=py_0
+  - traitlets=4.3.2=py36_1000
+  - typed-ast=1.4.0=py36h516909a_0
+  - wcwidth=0.1.7=py_1
+  - webencodings=0.5.1=py_1
+  - werkzeug=0.15.5=py_0
   - wheel=0.33.4=py36_0
   - widgetsnbextension=3.5.0=py36_0
   - wrapt=1.11.2=py36h516909a_0
@@ -164,69 +169,24 @@ dependencies:
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.4=h14c3975_4
-  - zeromq=4.3.1=he6710b0_3
+  - xz=5.2.4=h14c3975_1001
+  - zeromq=4.3.2=he1b5a44_2
   - zipp=0.5.1=py_0
-  - zlib=1.2.11=h7b6447c_3
+  - zlib=1.2.11=h516909a_1005
   - zstd=1.4.0=h3b9ef0a_0
   - pip:
-    - animalai==1.0.3
-    - aspy-yaml==1.3.0
+    - astor==0.8.0
     - atari-py==0.2.6
-    - beautifulsoup4==4.7.1
-    - beautifultable==0.7.0
-    - boto==2.49.0
-    - boto3==1.9.88
-    - botocore==1.12.116
-    - cfgv==2.0.0
-    - chardet==3.0.4
-    - click==6.7
     - cloudpickle==1.2.1
-    - cookies==2.2.1
-    - coverage==4.5.1
-    - coveralls==1.3.0
-    - docker==3.6.0
-    - docker-pycreds==0.4.0
-    - docopt==0.6.2
-    - docutils==0.14
-    - evalai==1.3.0
-    - flake8==3.0.4
+    - cycler==0.10.0
     - future==0.17.1
     - gin-config==0.2.0
     - grpcio==1.11.1
     - gym==0.13.1
-    - identify==1.4.5
-    - idna==2.7
-    - importlib-resources==1.0.2
-    - jmespath==0.9.4
     - jsonpickle==1.2
-    - lxml==4.2.1
-    - mccabe==0.5.3
-    - nodeenv==1.3.3
-    - numpy==1.14.5
     - opencv-python==4.1.0.25
     - pillow==5.4.1
-    - pluggy==0.6.0
-    - pre-commit==1.14.4
     - protobuf==3.6.1
-    - pycodestyle==2.0.0
-    - pyflakes==1.2.3
     - pyglet==1.3.2
-    - pytest==3.5.1
-    - pytest-cov==2.5.1
-    - python-dateutil==2.7.3
-    - pyyaml==5.1.1
-    - requests==2.20.0
-    - requests-toolbelt==0.8.0
-    - responses==0.9.0
-    - s3transfer==0.1.13
-    - scipy==1.3.0
-    - six==1.12.0
-    - soupsieve==1.9.2
-    - toml==0.10.0
-    - urllib3==1.24.3
-    - validators==0.12.2
-    - virtualenv==16.6.2
-    - websocket-client==0.56.0
 prefix: /home/guillermo/miniconda3/envs/animal
 
