progress on navigation skills

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ UnitySDK.log
 scripts/test_submission/summary.json
 scripts/test_submission/frames/*.npz
 scripts/test_submission/.~lock.summary.csv#
+scripts/test_submission/configs/bak/*
