progress in the implementation of tests

--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -1,40 +1,73 @@
-food/GoodGoal_size05.yaml:
-  threshold: -0.5
-  n_tests: 5
-food/GoodGoal_size1.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoal_size2.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoal_size3.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoal_size4.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoal_size5.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoalMulti_size05.yaml:
-  threshold: -0.5
-  n_tests: 5
-food/GoodGoalMulti_size1.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoalMulti_size2.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoalMulti_size3.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoalMulti_size4.yaml:
-  threshold: 0
-  n_tests: 5
-food/GoodGoalMulti_size5.yaml:
-  threshold: 0
-  n_tests: 5
-forcedChoice.yaml:
-  threshold: 0.
-  n_tests: 1
-
+food:
+  # just one goal
+  GoodGoal_size05.yaml:
+    threshold: -0.5
+    n_tests: 5
+  GoodGoal_size1.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoal_size2.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoal_size3.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoal_size4.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoal_size5.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMulti_size05.yaml:
+    threshold: -0.5
+    n_tests: 5
+  GoodGoalMulti_size1.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMulti_size2.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMulti_size3.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMulti_size4.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMulti_size5.yaml:
+    threshold: 0
+    n_tests: 5
+  # bouncing goals
+  GoodGoalBounce_size05.yaml:
+    threshold: -0.5
+    n_tests: 5
+  GoodGoalBounce_size1.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalBounce_size5.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMultiBounce_size05.yaml:
+    threshold: -0.5
+    n_tests: 5
+  GoodGoalMultiBounce_size1.yaml:
+    threshold: 0
+    n_tests: 5
+  GoodGoalMultiBounce_size5.yaml:
+    threshold: 0
+    n_tests: 5
+  # bad goals labyrinths
+  Labyrinth15_GoodGoal.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth15_GoodGoalMulti.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth30_GoodGoal.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth30_GoodGoalMulti.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth30_GoodGoalMulti4.yaml:
+    threshold: 3
+    n_tests: 5
