--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -1,74 +1,131 @@
-food:
-  # just one goal
-  GoodGoal_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoal_size1.yaml:
+01_food:
+  # # just one goal
+  # GoodGoal_size05.yaml:
+  #   threshold: -0.5
+  #   n_tests: 5
+  # GoodGoal_size1.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoal_size2.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoal_size3.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoal_size4.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoal_size5.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMulti_size05.yaml:
+  #   threshold: -0.5
+  #   n_tests: 5
+  # GoodGoalMulti_size1.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMulti_size2.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMulti_size3.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMulti_size4.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMulti_size5.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # # bouncing goals
+  # GoodGoalBounce_size05.yaml:
+  #   threshold: -0.5
+  #   n_tests: 5
+  # GoodGoalBounce_size1.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalBounce_size5.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMultiBounce_size05.yaml:
+  #   threshold: -0.5
+  #   n_tests: 5
+  # GoodGoalMultiBounce_size1.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # GoodGoalMultiBounce_size5.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # # bad goals labyrinths
+  # Labyrinth15_GoodGoal.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # Labyrinth15_GoodGoalMulti.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # Labyrinth30_GoodGoal.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # Labyrinth30_GoodGoalMulti.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # Labyrinth30_GoodGoalMulti4.yaml:
+  #   threshold: 3
+  #   n_tests: 5
+  #   partial_threshold: 1
+  # # moving labyrinth
+  # MovingLabyrinth5_GoodGoal.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # MovingLabyrinth10_GoodGoal.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # MovingLabyrinth15_GoodGoal.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # MovingLabyrinth5_GoodGoalMulti.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # MovingLabyrinth10_GoodGoalMulti.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # MovingLabyrinth15_GoodGoalMulti.yaml:
+  #   threshold: 0
+  #   n_tests: 5
+  # Red house
+  # RedHouse_1.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_2.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_3.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_4.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_5.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_6.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_7.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # RedHouse_8.yaml:
+  #   threshold: 0
+  #   n_tests: 1
+  # Dead coming
+  DeadComing_1.yaml:
     threshold: 0
-    n_tests: 5
-  GoodGoal_size2.yaml:
+    n_tests: 1
+  DeadComing_2.yaml:
     threshold: 0
-    n_tests: 5
-  GoodGoal_size3.yaml:
+    n_tests: 1
+  DeadComing_3.yaml:
     threshold: 0
-    n_tests: 5
-  GoodGoal_size4.yaml:
+    n_tests: 1
+  DeadComing_4.yaml:
     threshold: 0
-    n_tests: 5
-  GoodGoal_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalMulti_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size2.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size3.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size4.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMulti_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  # bouncing goals
-  GoodGoalBounce_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalBounce_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalBounce_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMultiBounce_size05.yaml:
-    threshold: -0.5
-    n_tests: 5
-  GoodGoalMultiBounce_size1.yaml:
-    threshold: 0
-    n_tests: 5
-  GoodGoalMultiBounce_size5.yaml:
-    threshold: 0
-    n_tests: 5
-  # bad goals labyrinths
-  Labyrinth15_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth15_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoal.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoalMulti.yaml:
-    threshold: 0
-    n_tests: 5
-  Labyrinth30_GoodGoalMulti4.yaml:
-    threshold: 3
-    n_tests: 5
-    partial_threshold: 1
+    n_tests: 1
