--- a/scripts/test_submission/configs/09_advanced_preferences/forcedChoice_1.yaml
+++ b/scripts/test_submission/configs/09_advanced_preferences/forcedChoice_1.yaml
@@ -29,6 +29,7 @@ arenas:
       positions: 
       - !Vector3 {x: 20, y: .5, z: 20}
       rotations: [0]
+      # Goals, should be placed on positions [10, 10], [10, 30], [30, 10], [30, 30]
     - !Item
       name: GoodGoal
       positions: 
