--- a/scripts/test_submission/configs/03_obstacles/Navigation_2.yaml
+++ b/scripts/test_submission/configs/03_obstacles/Navigation_2.yaml
@@ -20,3 +20,15 @@ arenas:
       - !Vector3 {x: 10, y: 1, z: 1}
       - !Vector3 {x: 10, y: 1, z: 1}
       - !Vector3 {x: 10, y: 1, z: 1}
+    - !Item
+      name: Ramp
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      sizes:
+      - !Vector3 {x: 5, y: 1, z: 5}
+      - !Vector3 {x: 5, y: 1, z: 5}
+      - !Vector3 {x: 5, y: 1, z: 5}
+      - !Vector3 {x: 5, y: 1, z: 5}
