--- a/scripts/test_submission/configs/03_obstacles/Navigation_4.yaml
+++ b/scripts/test_submission/configs/03_obstacles/Navigation_4.yaml
@@ -9,7 +9,7 @@ arenas:
       - !Vector3 {x: 1, y: 1, z: 1}
       - !Vector3 {x: 1, y: 1, z: 1}
     - !Item
-      name: Wall
+      name: WallTransparent
       colors:
       - !RGB {r: 153, g: 153, b: 153}
       - !RGB {r: 153, g: 153, b: 153}
@@ -20,3 +20,15 @@ arenas:
       - !Vector3 {x: 10, y: 1, z: 1}
       - !Vector3 {x: 10, y: 1, z: 1}
       - !Vector3 {x: 10, y: 1, z: 1}
+    - !Item
+      name: CylinderTunnelTransparent
+      colors:
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      - !RGB {r: 255, g: 0, b: 255}
+      sizes:
+      - !Vector3 {x: 5, y: 5, z: 5}
+      - !Vector3 {x: 5, y: 5, z: 5}
+      - !Vector3 {x: 5, y: 5, z: 5}
+      - !Vector3 {x: 5, y: 5, z: 5}
