Added many tests to category 10

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ scripts/test_submission/frames/*.npz
 scripts/test_submission/.~lock.summary.csv#
 scripts/test_submission/configs/bak/*
 scripts/test_submission/test_config.1.yaml
+scripts/test_submission/_temp/*
